--- a/stylesheets/resume.css
+++ b/stylesheets/resume.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Raleway:100,200,300,400,500,600,700,800,900');
 
 
-.section-title, .details, .title, p {
-  margin: 0;
-  padding:0;
+p {
   font-family: "Lato", sans-serif;
   font-weight: 300;
   color: black;
+  margin: 0;
+  padding: 0;
+  font-size: 15px;
 }
 
 ul {
@@ -35,14 +36,18 @@ a:hover {
   font-family: 'Lato', sans-serif;
   font-weight: 300;
   color: gray;
-  font-size: 2em;
+  font-size: 32px;
+  margin: 0;
+  padding: 0;
 }
 
 .title {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  font-size: 1.2em;
+  font-size: 19.2px;
   color: black;
+  margin: 0;
+  padding: 0;
 }
 
 .tag {
@@ -56,6 +61,9 @@ a:hover {
     font-family: 'Raleway', sans-serif;
     font-weight: 500;
     color: gray;
+    margin: 0;
+    padding: 0;
+    font-size: 17px;
 }
 
 
