added some jQuery (project name motion is animated), resume sections collapse in an accordion, cleaned up some redundant CSS

--- a/stylesheets/styles1.css
+++ b/stylesheets/styles1.css
@@ -32,3 +32,10 @@ table tr td div {
 #circle-table {
   margin-left: 20%;
 }
+
+table tr td:hover .circle {
+  width: 85px;
+  height: 85px;
+  margin: -5px;
+  z-index: 1;
+}
