--- a/stylesheets/main-style.css
+++ b/stylesheets/main-style.css
@@ -42,6 +42,10 @@ h3 {
   padding: 0;
 }
 
+*:focus {
+  outline: none;
+}
+
 .section-details-1 {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
