--- a/stylesheets/project-responsive.css
+++ b/stylesheets/project-responsive.css
@@ -34,6 +34,12 @@
     margin-left:1em;
     margin-right:1em;
   }
+
+  .rmbg-img {
+    width: 90%;
+    display: block;
+    margin: auto;
+  }
 }
 
 @media (max-width: 1078px) {
