--- a/stylesheets/projects-table.css
+++ b/stylesheets/projects-table.css
@@ -1,30 +1,36 @@
 /*Table details - projects.html*/
 table tr:nth-child(2) td div {
-  background-image: url("../project-images/tcp.png");  }
+  background-image: url("../project-images/bbbss2.png");  }
 
 table tr:nth-child(4) td div {
-  background-image: url("../project-images/jshelp-highlight.png");  }
+  background-image: url("../project-images/rectangles-3.png");  }
 
 table tr:nth-child(6) td div {
-  background-image: url("../project-images/lil-guy-sky.jpg"); }
+  background-image: url("../project-images/tcp.png");  }
 
 table tr:nth-child(8) td div {
-  background-image: url("../project-images/v-jam.jpg"); }
+  background-image: url("../project-images/jshelp-highlight.png");  }
 
 table tr:nth-child(10) td div {
-  background-image: url("../project-images/quadTreePoint2.png");}
+  background-image: url("../project-images/lil-guy-sky.jpg"); }
 
 table tr:nth-child(12) td div {
-  background-image: url("../project-images/circle_final.png"); }
+  background-image: url("../project-images/v-jam.jpg"); }
 
 table tr:nth-child(14) td div {
-  background-image: url("../project-images/cornell-box-thumb.png"); }
+  background-image: url("../project-images/quadTreePoint2.png");}
 
 table tr:nth-child(16) td div {
-  background-image: url("../project-images/vpl-nest.jpg");}
+  background-image: url("../project-images/circle_final.png"); }
 
 table tr:nth-child(18) td div {
-  background-image: url("../project-images/touch-box.jpg"); }
+  background-image: url("../project-images/cornell-box-thumb.png"); }
 
 table tr:nth-child(20) td div {
+  background-image: url("../project-images/vpl-nest.jpg");}
+
+table tr:nth-child(22) td div {
+  background-image: url("../project-images/touch-box.jpg"); }
+
+table tr:nth-child(24) td div {
   background-image: url("../project-images/leds-arduino.jpg"); }
